[project]
name = "erserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.21"
dependencies = [
    "coreferee>=1.4.1",
    "fastapi>=0.115.11",
    "numpy==1.26.4",
    "pip>=25.0.1",
    "pydantic>=1.10.21",
    "setuptools>=75.8.2",
    "spacy>=3.5.4",
    "uvicorn>=0.34.0",
    "wheel>=0.45.1",
]
